--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,6 @@
 @import "./colours.css";
 @import "./utilities/normalize.css";
+@import "./utilities/icons.css";
 
 @font-face {
   font-family: PlayfairDisplay;
