chore: move header/footer background colour to tag;

--- a/styles/base.css
+++ b/styles/base.css
@@ -26,6 +26,11 @@ body {
   background: var(--chrome-bg);
 }
 
+header,
+footer {
+  background: var(--color-alt);
+}
+
 header {
   grid-area: header;
 }
