--- a/styles/colours.css
+++ b/styles/colours.css
@@ -1,4 +1,41 @@
 :root {
+  --primary-50: var(--color-emerald-50);
+  --primary-100: var(--color-emerald-100);
+  --primary-200: var(--color-emerald-200);
+  --primary-300: var(--color-emerald-300);
+  --primary-400: var(--color-emerald-400);
+  --primary-500: var(--color-emerald-500);
+  --primary-600: var(--color-emerald-600);
+  --primary-700: var(--color-emerald-700);
+  --primary-800: var(--color-emerald-800);
+  --primary-900: var(--color-emerald-900);
+  --primary-950: var(--color-emerald-950);
+
+  --secondary-50: var(--color-amber-50);
+  --secondary-100: var(--color-amber-100);
+  --secondary-200: var(--color-amber-200);
+  --secondary-300: var(--color-amber-300);
+  --secondary-400: var(--color-amber-400);
+  --secondary-500: var(--color-amber-500);
+  --secondary-600: var(--color-amber-600);
+  --secondary-700: var(--color-amber-700);
+  --secondary-800: var(--color-amber-800);
+  --secondary-900: var(--color-amber-900);
+  --secondary-950: var(--color-amber-950);
+
+  --primary: var(--primary-800);
+  --secondary: var(--secondary-600);
+
+  --white: var(--color-gray-50);
+  --black: var(--color-gray-950);
+
+  --page-bg: var(--white);
+  --color-alt: var(--color-gray-200);
+  --color-alt2: var(--color-gray-300);
+  --color-text: var(--black);
+
+  --chrome-bg: var(--color-alt);
+
   --color-red-50: oklch(97.1% .013 17.38);
   --color-red-100: oklch(93.6% .032 17.717);
   --color-red-200: oklch(88.5% .062 18.334);
