--- a/styles/components/_popupAds.css
+++ b/styles/components/_popupAds.css
@@ -1,4 +1,3 @@
-
 /* Draggable elements */
 
 .dragBox {
@@ -6,7 +5,7 @@
   top: 40px;
   left: 40px;
   cursor: move;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 .dragHeader {
@@ -29,13 +28,27 @@
 
 /* Intentionally awful */
 @keyframes seizureLite {
-  0%   { background: red; }
-  7%   { background: lime; }
-  22%  { background: magenta; }
-  31%  { background: cyan; }
-  58%  { background: yellow; }
-  76%  { background: blue; }
-  100% { background: red; }
+  0% {
+    background: red;
+  }
+  7% {
+    background: lime;
+  }
+  22% {
+    background: magenta;
+  }
+  31% {
+    background: cyan;
+  }
+  58% {
+    background: yellow;
+  }
+  76% {
+    background: blue;
+  }
+  100% {
+    background: red;
+  }
 }
 
 #popupOneHeader {
@@ -50,7 +63,7 @@
 
 #popupOneBox {
   position: absolute;
-  z-index: 10;
+  z-index: 1000;
   border-width: 2px;
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
