--- a/styles/components/_header.css
+++ b/styles/components/_header.css
@@ -41,18 +41,65 @@
 }
 
 .nav-bar__list {
+  --link-padding-x: 0.5rem;
+  --link-padding-y: 0.75rem;
+
   display: flex;
   flex-direction: row;
+
   justify-content: space-around;
   justify-self: center;
+
   padding: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-  gap: 0.35rem;
 }
 
 .nav-bar__item {
+  --trans-hover-duration: 500ms;
+
+  position: relative;
+
+  padding: var(--link-padding-y) var(--link-padding-x);
+  border-radius: 0.25rem;
+
   list-style: none;
+
+  cursor: pointer;
+
+  transition:
+    box-shadow var(--trans-hover-duration) ease,
+    translate var(--trans-hover-duration) ease;
+}
+
+.nav-bar__item:after {
+  --trim-width-less: 2rem;
+  --trim-height: 2px;
+
+  content: "";
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  width: calc(100% - var(--trim-width-less));
+  height: var(--trim-height);
+
+  translate: calc(var(--trim-width-less) * 0.5) calc(var(--trim-height) / 2);
+
+  transition: background 500ms ease-in-out;
+}
+
+.nav-bar__item:hover,
+.nav-bar__item:focus-within {
+  box-shadow:
+    0 4px 6px -1px rgb(0 0 0 / 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1);
+
+  translate: 0 -0.125rem;
+}
+
+.nav-bar__item:hover:after,
+.nav-bar__item:focus-within:after {
+  background-color: var(--primary-900);
 }
 
 .nav-bar__link {
@@ -76,8 +123,7 @@
   }
 
   .nav-bar__list {
-    justify-content: space-between;
-    gap: 4rem;
+    --link-padding-x: 2rem;
     justify-content: center;
   }
 }
