chore: fix aside pointer events again;

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -16,6 +16,10 @@
   isolation: isolate;
 }
 
+.aside--extras > * {
+  pointer-events: auto;
+}
+
 /* Column Layouts */
 .main--two-column {
   --main--two-column-padding: 1rem;
