chore(article-prose): 1.5 lineheight paragraphs;

--- a/styles/components/_article.css
+++ b/styles/components/_article.css
@@ -248,6 +248,10 @@ summary::-webkit-details-marker {
   line-height: 1.2;
 }
 
+.article__prose p {
+  line-height: 1.5;
+}
+
 .article__prose .byline {
   color: var(--neutral-500);
   font-style: italic;
