--- a/styles/components/_template.css
+++ b/styles/components/_template.css
@@ -11,11 +11,17 @@
   padding-bottom: 0.5rem;
   border-bottom: 1px var(--primary-800) solid;
 
+  font-size: 1.75em;
+
   background: linear-gradient(
     90deg in lch,
     transparent 80%,
     var(--primary-800)
   );
+}
+
+.article-group ~ .article-group > .article-group__heading {
+  font-size: 1.5em;
 }
 
 .article-container {
