--- a/styles/components/_article.css
+++ b/styles/components/_article.css
@@ -269,6 +269,21 @@ summary::-webkit-details-marker {
   font-weight: 500;
 }
 
+.article__prose .article__image-wrapper {
+  margin: 0 auto;
+
+  width: fit-content;
+
+  overflow: hidden;
+}
+
+.article__prose .article__image-wrapper > .article__image {
+  width: fit-content;
+  max-width: 100%;
+  height: 100%;
+  object-fit: fit;
+}
+
 /* Blockquote */
 .article__prose blockquote {
   border-left: 5px solid var(--primary-500);
