chore: added sass and changed some style sheets to sass stylesheets

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,8 +1,8 @@
-@import "./colours.css";
-@import "./utilities/normalize.css";
-@import "./utilities/icons.css";
-@import "./utilities/utils.css";
-@import "./layout.css";
+@import "./colours.scss";
+@import "./utilities/normalize.scss";
+@import "./utilities/icons.scss";
+@import "./utilities/utils.scss";
+@import "./layout.scss";
 
 @font-face {
   font-family: PlayfairDisplay;
